--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -19,6 +19,7 @@ repositories {
 }
 
 dependencies {
+    compile group: 'com.mashape.unirest', name: 'unirest-java', version: '1.3.1'
     compile "com.android.support:support-v4:26.1.0"
     compile "com.android.support:support-v13:26.1.0"
     compile "com.android.support:cardview-v7:26.1.0"
