--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -1,30 +1,4 @@
-
-buildscript {
-    repositories {
-        jcenter()
-    }
-
-    dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
-    }
-}
-
 apply plugin: 'com.android.application'
-
-repositories {
-    jcenter()
-    maven {
-        url 'https://maven.google.com'
-    }
-}
-
-dependencies {
-    compile group: 'com.mashape.unirest', name: 'unirest-java', version: '1.3.1'
-    compile "com.android.support:support-v4:26.1.0"
-    compile "com.android.support:support-v13:26.1.0"
-    compile "com.android.support:cardview-v7:26.1.0"
-    compile "com.android.support:appcompat-v7:26.1.0"
-}
 
 // The sample build uses multiple directories to
 // keep boilerplate and common code separate from
@@ -36,13 +10,13 @@ List<String> dirs = [
 
 android {
     
-        compileSdkVersion 26
+        compileSdkVersion 29
 
-    buildToolsVersion "26.0.1"
+    buildToolsVersion "29.0.3"
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 26
+        targetSdkVersion 29
     }
 
     compileOptions {
@@ -60,6 +34,14 @@ android {
         androidTest.setRoot('tests')
         androidTest.java.srcDirs = ['tests/src']
 
+    }
+
+    dependencies {
+        implementation group: 'com.mashape.unirest', name: 'unirest-java', version: '1.3.1'
+        implementation "com.android.support:support-v4:26.1.0"
+        implementation "com.android.support:support-v13:26.1.0"
+        implementation "com.android.support:cardview-v7:26.1.0"
+        implementation "com.android.support:appcompat-v7:26.1.0"
     }
 
 }
