--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,19 @@
+buildscript {
+    repositories {
+        jcenter()
+        google()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.6.1'
+    }
+}
 
-
-
-
-
-
-
-
-
-
+allprojects {
+    repositories {
+        jcenter()
+        google()
+        maven {
+            url 'https://maven.google.com'
+        }
+    }
+}
