--- a/Application/src/main/AndroidManifest.xml
+++ b/Application/src/main/AndroidManifest.xml
@@ -16,9 +16,11 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.android.camera2basic">
 
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
@@ -26,7 +28,9 @@
     <application android:allowBackup="true"
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher"
-        android:theme="@style/MaterialTheme">
+        android:usesCleartextTraffic="true"
+        android:theme="@style/MaterialTheme"
+        tools:targetApi="m">
 
         <activity android:name=".CameraActivity"
                   android:label="@string/app_name">
@@ -36,5 +40,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
