--- a/Application/src/main/AndroidManifest.xml
+++ b/Application/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
@@ -16,6 +17,10 @@
         android:theme="@style/MaterialTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
+        <service
+            android:name=".PictureCaptureService"
+            android:exported="false"></service>
+
         <activity
             android:name=".CameraActivity"
             android:label="@string/app_name">
