added main activity which call to camera activity

--- a/Application/src/main/AndroidManifest.xml
+++ b/Application/src/main/AndroidManifest.xml
@@ -17,9 +17,17 @@
         android:theme="@style/MaterialTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <service
             android:name=".PictureCaptureService"
-            android:exported="false"></service>
+            android:exported="false" />
 
         <activity
             android:name=".CameraActivity"
