--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -50,3 +50,8 @@ android {
     }
 
 }
+
+dependencies {
+    implementation 'androidx.appcompat:appcompat:+'
+    implementation 'androidx.constraintlayout:constraintlayout:+'
+}
