--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -56,4 +56,5 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:+'
     implementation 'androidx.appcompat:appcompat:+'
     implementation 'androidx.constraintlayout:constraintlayout:+'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 }
