--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:+'
     implementation "androidx.preference:preference:1.1.0"
     implementation 'com.google.android.material:material:+'
+    implementation 'me.dm7.barcodescanner:zxing:1.9'
     implementation 'androidx.constraintlayout:constraintlayout:+'
     implementation 'androidx.navigation:navigation-fragment:+'
     implementation 'androidx.navigation:navigation-ui:+'
