--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -15,6 +15,7 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 29
+        versionName "1.3"
     }
 
     packagingOptions {
@@ -38,9 +39,7 @@ android {
 
     }
 
-//    dependencies {
-//
-//    }
+
 
 }
 
