--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -50,6 +50,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.appcompat:appcompat:+'
     implementation "androidx.preference:preference:1.1.0"
+//    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.1'
+//    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.1'
+    implementation 'org.slf4j:slf4j-api:1.7.25'
+    implementation 'com.github.tony19:logback-android:2.0.0'
     implementation 'com.google.android.material:material:+'
     implementation 'androidx.constraintlayout:constraintlayout:+'
     implementation 'androidx.navigation:navigation-fragment:+'
