--- a/Application/src/main/AndroidManifest.xml
+++ b/Application/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         android:label="@string/app_name"
         android:theme="@style/MaterialTheme"
         android:usesCleartextTraffic="true"
+        android:name=".App"
         tools:targetApi="m">
         <activity android:name=".MainActivity"
             android:screenOrientation="portrait">
