--- a/Application/src/main/AndroidManifest.xml
+++ b/Application/src/main/AndroidManifest.xml
@@ -28,8 +28,7 @@
         </activity>
         <activity
             android:name=".CameraActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait"></activity>
+            android:label="@string/app_name"></activity>
     </application>
 
 </manifest>
