--- a/Application/src/main/AndroidManifest.xml
+++ b/Application/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         </activity>
         <activity
             android:name=".CameraActivity"
+            android:screenOrientation="landscape"
             android:label="@string/app_name"></activity>
     </application>
 
