--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -57,4 +57,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:+'
     implementation 'androidx.constraintlayout:constraintlayout:+'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'com.google.android.gms:play-services-vision:11.0.4'
 }
+
