--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -58,5 +58,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:+'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.google.android.gms:play-services-vision:11.0.4'
+    implementation 'com.google.code.gson:gson:2.8.6'
+
 }
 
